// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue:stories for applications should create the stories with interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/vue3-vite';
import NxWelcome from './NxWelcome.vue';

import { expect } from 'storybook/test';

const meta = {
  component: NxWelcome,
  title: 'NxWelcome',
} satisfies Meta<typeof NxWelcome>;
export default meta;

type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {},
} satisfies Story;

export const Heading = {
  args: {},
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/NxWelcome/gi)).toBeTruthy();
  },
} satisfies Story;
"
`;

exports[`vue:stories for applications should create the stories with interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/vue3-vite';
import anotherCmp from './another-cmp.vue';

import { expect } from 'storybook/test';

const meta = {
  component: anotherCmp,
  title: 'anotherCmp',
} satisfies Meta<typeof anotherCmp>;
export default meta;

type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {
    name: 'name',
    displayAge: false,
    age: 0,
  },
} satisfies Story;

export const Heading = {
  args: {
    name: 'name',
    displayAge: false,
    age: 0,
  },
  play: async ({ canvas }) => {
    await expect(canvas.getByText(/anotherCmp/gi)).toBeTruthy();
  },
} satisfies Story;
"
`;

exports[`vue:stories for applications should create the stories without interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/vue3-vite';
import NxWelcome from './NxWelcome.vue';

const meta = {
  component: NxWelcome,
  title: 'NxWelcome',
} satisfies Meta<typeof NxWelcome>;
export default meta;

type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {},
} satisfies Story;
"
`;

exports[`vue:stories for applications should create the stories without interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/vue3-vite';
import anotherCmp from './another-cmp.vue';

const meta = {
  component: anotherCmp,
  title: 'anotherCmp',
} satisfies Meta<typeof anotherCmp>;
export default meta;

type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {
    name: 'name',
    displayAge: false,
    age: 0,
  },
} satisfies Story;
"
`;

exports[`vue:stories for applications should not update existing stories 1`] = `
"import { ComponentStory, ComponentMeta } from '@storybook/vue3';
"
`;
